# lunar-lander-v3-competition

./: agent.py  dqn_model.pt  dqn_model.py  dqn_model_best.pt  dqn_pretrained.pt  dqn_pretrained_best.pt  dqn_scratch.pt  dqn_scratch_best.pt  model.pt  model1.pt  model162.pt  model204.pt  model222.pt  model227.pt  model230.pt  model_a2c_continue_best.pt  model_a2c_continue_final.pt  model_a2c_polish_best.pt  model_a2c_polish_final.pt  model_cem_best.pt  model_dqn_seed0_best.pt  model_ppo_best.pt  model_ppo_explore_best.pt  model_ppo_gae_best.pt  model_ppo_gae_final.pt  model_shaped_best.pt  model_tuned_a.pt  pyproject.toml  rl_model.py  train.py  train2.py  train_best_greedy_eval.diff  train_dqn.py
