[project]
name = "lunar-lander-mini"
version = "0.1.0"
description = "Minimal A2C baseline for modified LunarLander-v3 (ml-arena)"
requires-python = "==3.10.*"
dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "numpy>=1.26,<2.0",
    "torch==2.9.1",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
